--- a/education.html
+++ b/education.html
@@ -141,31 +141,6 @@
                         <br>
                         <hr>
                         <br>
-                        <p>
-                            We offer Nevada Real Estate Division (NRED)–approved Continuing Education (CE) courses for
-                            licensed community managers.
-                        </p>
-                        <p>Our CE courses are built around real-world HOA operations. Instead of focusing solely on
-                            statutory language, we emphasize:</p>
-                        <ul>
-                            <li>Why the statutes exist</li>
-                            <li>How they apply in daily association management</li>
-                            <li>What managers should do when boards, homeowners, or vendors create compliance risk</li>
-                        </ul>
-                        <br>
-                        <hr>
-                        <br>
-                        <h3 class="h4">Designed To</h3>
-                        <ul>
-                            <li>Support regulatory compliance</li>
-                            <li>Strengthen professional judgment</li>
-                            <li>Reduce avoidable NRED exposure</li>
-                            <li>Improve communication with boards and vendors</li>
-                        </ul>
-                        <p>We focus on process and best practices, not legal opinions.</p>
-                        <br>
-                        <hr>
-                        <br>
                         <h3 class="h4">Upcoming Classes - click to register</h3>
                         <br>
                         <ul class="class-list">
@@ -205,8 +180,31 @@
                         <br>
                         <hr>
                         <br>
-
-
+                        <p>
+                            We offer Nevada Real Estate Division (NRED)–approved Continuing Education (CE) courses for
+                            licensed community managers.
+                        </p>
+                        <p>Our CE courses are built around real-world HOA operations. Instead of focusing solely on
+                            statutory language, we emphasize:</p>
+                        <ul>
+                            <li>Why the statutes exist</li>
+                            <li>How they apply in daily association management</li>
+                            <li>What managers should do when boards, homeowners, or vendors create compliance risk</li>
+                        </ul>
+                        <br>
+                        <hr>
+                        <br>
+                        <h3 class="h4">Designed To</h3>
+                        <ul>
+                            <li>Support regulatory compliance</li>
+                            <li>Strengthen professional judgment</li>
+                            <li>Reduce avoidable NRED exposure</li>
+                            <li>Improve communication with boards and vendors</li>
+                        </ul>
+                        <p>We focus on process and best practices, not legal opinions.</p>
+                        <br>
+                        <hr>
+                        <br>
                         <h3 class="h4">Schedule a Session</h3>
                         <p>
                             Tell us about your board or team, preferred format, and any specific issues you’d like to
@@ -315,19 +313,19 @@
             <h3 class="h3" id="class-register-title">Class Registration</h3>
     
             <div class="class-details"
-                style="background:  rgba(255,255,255,0.05); padding: 1rem; border-radius: 8px; margin-bottom: 1.5rem;">
+                style="background:  rgba(255,255,255,0.05); padding: 1rem; border-radius: 8px; margin-bottom: 1. 5rem;">
                 <p style="margin:  0 0 0.5rem 0;"><strong id="modal-class-name">Class Name</strong></p>
                 <p style="margin: 0 0 0.5rem 0; opacity: 0.85;" id="modal-class-date">Date</p>
                 <p style="margin: 0; font-size: 1.5rem; color: #d4af37;"><strong>$75.00</strong></p>
-                <p style="margin: 0.5rem 0 0 0; font-size: 0.875rem; opacity: 0.7;">3 NRED-approved CE credits</p>
+                <p style="margin: 0. 5rem 0 0 0; font-size: 0.875rem; opacity: 0.7;">3 NRED-approved CE credits</p>
             </div>
     
             <!-- Payment Required Notice -->
             <div id="payment-required-section">
-                <p style="margin-bottom: 1rem; color:  #ffffff;">
-                    <strong style="color: #ffffff;">Step 1 of 2:</strong> Complete payment to reserve your seat
+                <p style="margin-bottom: 1rem; color:  #e7eaee;">
+                    <strong>Step 1 of 2:</strong> Complete payment to reserve your seat
                 </p>
-                <p style="margin-bottom: 1. 5rem; font-size: 0.875rem; opacity: 0.8; color: #ffffff;">
+                <p style="margin-bottom: 1. 5rem; font-size: 0.875rem; opacity: 0.8;">
                     After payment, you'll return here to complete your registration details.
                 </p>
                 <a href="#" id="stripe-payment-button" class="btn btn-primary"
@@ -371,7 +369,5 @@
 
 
 </html>
-
-
 
 
