--- a/reserve-studies.html
+++ b/reserve-studies.html
@@ -193,10 +193,10 @@
                 <h4 class="h4">&nbsp;&nbsp;Select Study Level or Inquire About Free Reviews</h4>
                 <select name="Type of Study">
                     <option>Free Review Inquiry</option>
-                    <option>Level 1 Full Study</option>
-                    <option>Level 2 Update w/ Site Inspection</option>
-                    <option>Level 3 Update w/o Site Inspection</option>
-                    <option>Level 4 Builder Reserve Study</option>
+                    <option>Level 1 - Full Study</option>
+                    <option>Level 2 - Update w/ Site Inspection</option>
+                    <option>Level 3 - Update w/o Site Inspection</option>
+                    <option>Level 4 - Builder Reserve Study</option>
                 </select>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
@@ -209,3 +209,4 @@
 
 
 </html>
+
