Fix HTML encoding issues in reserve-studies.html

--- a/reserve-studies.html
+++ b/reserve-studies.html
@@ -189,6 +189,11 @@
                 <input type="text" name="Name" placeholder="Your Name" required>
                 <input type="text" name="Association" placeholder="Association Name" required>
                 <input type="text" name="Address" placeholder="Address" required>
+                <input type="text" name="# Of Units" placeholder="# Of Units" required>
+                <input type="text" name="Gated" placeholder="Community Gated?" required>
+                <input type="text" name="Private Streets" placeholder="Private Streets?" required>
+                <input type="date" name="Last Study" placeholder="Date of Last Study" required>
+                <input type="email" name="Email" placeholder="Email For Bid" required>
                 <input type="tel" name="Phone" placeholder="Phone Number">
                 <h4 class="h4">&nbsp;&nbsp;Select Study Level or Inquire About Free Reviews</h4>
                 <select name="Type of Study">
@@ -209,4 +214,5 @@
 
 
 </html>
+
 
