--- a/reserve-studies.html
+++ b/reserve-studies.html
@@ -191,8 +191,8 @@
                 <input type="hidden" name="access_key" value="86f3717a-7836-49aa-99a2-4e6adbd7ec3f">
                 <input type="text" name="Name" placeholder="Your Name" required>
                 <input type="text" name="Association" placeholder="Association Name" required>
-                <input type="text" name="Address" placeholder="Address" required>
-                <input type="text" name="# Of Units" placeholder="# Of Units" required>
+                <input type="text" name="Address" placeholder="Association Address" required>
+                <input type="text" name="# Of Units" placeholder="# Of Units">
                 
                 <div style="display: flex; align-items: center; gap: 1rem;">
                     <span>Community Gated?</span>
@@ -214,9 +214,9 @@
                     </label>
                 </div>
                 
-                <input type="text" id="last-study-date" name="Last Study" placeholder="Date of Last Full Study (MM/DD/YYYY)" required>
-                <input type="email" name="Email" placeholder="Email For Bid" required>
-                <input type="tel" name="Phone" placeholder="Phone Number">
+                <input type="text" id="last-study-date" name="Last Study" placeholder="📅 Date of Last Full Study">
+                <input type="text" name="Where" placeholder="Where to Send Bid?" required>
+                <input type="tel" name="Phone" placeholder="Phone Number" required>
                 <h4 class="h4">&nbsp;&nbsp;Select Study Level or Inquire About Free Reviews</h4>
                 <select name="Type of Study">
                     <option>Free Review Inquiry</option>
