Remove 'required' attribute from radio inputs

--- a/reserve-studies.html
+++ b/reserve-studies.html
@@ -197,7 +197,7 @@
                 <div style="display: flex; align-items: center; gap: 1rem;">
                     <span>Community Gated?</span>
                     <label style="display: flex; align-items: center; gap: 0.25rem;">
-                        <input type="radio" name="Gated" value="Yes" required> Yes
+                        <input type="radio" name="Gated" value="Yes"> Yes
                     </label>
                     <label style="display: flex; align-items: center; gap: 0.25rem;">
                         <input type="radio" name="Gated" value="No"> No
@@ -207,7 +207,7 @@
                 <div style="display: flex; align-items: center; gap: 1rem;">
                     <span>Private Streets?</span>
                     <label style="display: flex; align-items: center; gap: 0.25rem;">
-                        <input type="radio" name="Private Streets" value="Yes" required> Yes
+                        <input type="radio" name="Private Streets" value="Yes"> Yes
                     </label>
                     <label style="display: flex; align-items: center; gap: 0.25rem;">
                         <input type="radio" name="Private Streets" value="No"> No
