--- a/reserve-studies.html
+++ b/reserve-studies.html
@@ -231,7 +231,7 @@
     </dialog>
 
     <!-- Flatpickr JS -->
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr" defer></script>
     <script src="assets/script.js" defer></script>
 </body>
 
