--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
     <p>Support coordination with H&amp;H Legal (independent law firm).</p>
     <a class="btn btn-primary" href="https://handhlegal.net" target="_blank" rel="noopener noreferrer">Visit H&amp;H Legal</a>
   </article>
+
+  <article class="service-card service-card-wide" data-observe data-link="porter-maintenance.html">
+    <div class="thumb" style="background-image:url('assets/images/service-porter.jpg');"></div>
+    <h3 class="h4">HOA Porter and Maintenance Services</h3>
+    <p>Comprehensive property maintenance and porter services for your community. </p>
+    <a href="porter-maintenance.html" class="btn btn-primary">Learn More</a>
+  </article>
+
 </div>
 
     </div>
