--- a/education.html
+++ b/education.html
@@ -357,6 +357,19 @@
                 <p style="margin-top:  1rem; font-size:  0.875rem; opacity: 0.6; text-align: center;">
                     🔒 Secure payment powered by Stripe
                 </p>
+                <!-- Refund policy (tiny text at bottom) -->
+                <div style="margin-top: 0.6rem; font-size: 0.70rem; opacity: 0.55; line-height: 1.25; text-align: left;">
+                <div style="text-align:center; font-weight:600; margin-bottom:0.25rem;">
+                    Refund Policy
+                </div>
+                <ul style="margin: 0.25rem 0 0; padding-left: 1.1rem;">
+                    <li>Full refunds will be granted for cancellations received at least 7 days prior to the scheduled course date.</li>
+                    <li>Cancellations received within 3–6 days of the course will receive a 50% refund.</li>
+                    <li>No refunds will be granted for cancellations made less than 48 hours prior to the course or for no-shows.</li>
+                    <li>Participants may request to transfer enrollment to a future course date at no additional charge if requested at least 3 days prior to the scheduled course.</li>
+                    <li>In the unlikely event the sponsor cancels or reschedules the course, all fees will be refunded in full or applied to a future course date, at the registrant’s choice.</li>
+                </ul>
+            </div>
             </div>
     
             <!-- Registration Form (shown after payment) -->
@@ -391,6 +404,5 @@
 
 
 </html>
-
 
 
